name:                FPproject
version:             0.1.0.0
author:              Rik Roseboom
maintainer:          roseboom.rik@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable FPproject
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       containers
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , General
                     , Functionality
                     , View
                     , Constants
  default-language:    Haskell2010