name:                FPproject
version:             0.1.0.0
author:              Rik Roseboom
maintainer:          roseboom.rik@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable FPproject
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       containers,
                       time
  hs-source-dirs:      src
  other-modules:       HandleStep
                     , HandleInput
                     , DataTypes
                     , General
                     , MorePlayerLogic
                     , View
                     , Constants
                     , CanShootClass
                     , MovableClass
                     , TempObjectClass
                     , CanCollideWithPlayerClass
                     , CanGetHitByPlayerBulletClass
                     , RandomObjectClass
                     , HasAnimationClass
                     , HasImplosionAnimationClass
                     , ViewableClass
  default-language:    Haskell2010